2007-04-16  Peter Williams  <peter@newton.cx>

	* demo/sinc-ps.py (pl): Update to new dump() API.

	* omega/util.py (makeQuickPipeline): Also return the RectPainter so that
	the caller can futz with it.

2007-04-11  Peter Williams  <peter@newton.cx>

	* omega/util.py (makeQuickRectDataPainter): Update for better bounds
	setting.

	* omega/rect.py (RectPlot.quickAdd): Add a default template if none
	is specified and we have a FieldPainter to reference.

2007-03-22  Peter Williams  <peter@newton.cx>

	* omega/util.py (dump): Continue moving to a more 
	pipeline-centric model.

2007-03-22  Peter Williams  <peter@newton.cx>

	* omega/__init__.py (RSP): Add a shortcut for 
	util.makeRectSkeletonPipeline.

	* omega/rect.py (LogarithmicAxis.getMin): Add 'min' and 'max'
	properties that help us behave isomorphically to a LinearAxis.
	(LogarithmicAxisPainter.getTickLocations): Rework the code here
	to reset the variables from integers every decade, to avoid
	rounding errors (which of course are likely to be a big deal if
	we're working a large logarithmic range).
	(RectPlot.quickAdd): New utility function that calls 
	util.addQuickRectDataPainter. Kind of ugly since it requires a 
	pipeline object.

	* omega/util.py (PaintPipeline.generateSourceId): Add a little 
	function to automatically generate string names for sources.
	(makeRectSkeletonPipeline): Just create a RectPlot, a Bag,
	and a BlackOnWhiteBitmap style and stuff them into a pipeline.
	(makeQuickSource): Break out the code that generates a data
	source into here.
	(makeQuickRectDataPainter): And break out code to make a 
	RectDataPainter here.
	(addQuickRectDataPainter): New function to create a quick RDP
	and add it to an existing RectPlot.
	(makeQuickPipeline): Simplify to branch out to the above
	functions.

2007-03-05  Peter Williams  <peter@newton.cx>

	* omega/rect.py (LogarithmicAxis.__init__): Implement a logical
	logarithmic axis. Right now the log base is fixed at 10.