@@ -1,3 +1,9 @@
+2007-06-28  Peter Williams  <peter@newton.cx>
+
+	* omega/gtkUtil.py (LiveDisplay.linger): New function: block the caller
+	until the LiveDisplay has been destroyed by the user. Useful for 
+	semi-interactive programs not run from IPython.
+
 2007-04-16  Peter Williams  <peter@newton.cx>
 
 	* demo/sinc-ps.py (pl): Update to new dump() API.
